go/p2panda_ffi/p2panda_ffi.h

// ⚠️ Attention: If you change this #else block (ending in `#endif // def UNIFFI_SHARED_H`) you *must* ⚠️
// ⚠️ increment the version suffix in all instances of UNIFFI_SHARED_HEADER_V6 in this file.           ⚠️

typedef struct RustBuffer {
	uint64_t capacity;
	uint64_t len;
	uint8_t *data;
} RustBuffer;
// Error definitions
typedef struct RustCallStatus {
	int8_t code;
	RustBuffer errorBuf;
} RustCallStatus;
RustBuffer uniffi_p2panda_ffi_fn_method_publickey_to_hex(uint64_t ptr, RustCallStatus *out_status
);
int8_t uniffi_p2panda_ffi_fn_method_publickey_verify(uint64_t ptr, RustBuffer bytes, uint64_t signature, RustCallStatus *out_status
);
uint64_t uniffi_p2panda_ffi_fn_constructor_relayurl_from_str(RustBuffer value, RustCallStatus *out_status
);
RustBuffer uniffi_p2panda_ffi_fn_method_relayurl_to_str(uint64_t ptr, RustCallStatus *out_status
);
uint64_t uniffi_p2panda_ffi_fn_constructor_signature_from_bytes(RustBuffer value, RustCallStatus *out_status
);
uint64_t uniffi_p2panda_ffi_fn_constructor_signature_from_hex(RustBuffer value, RustCallStatus *out_status
);
RustBuffer uniffi_p2panda_ffi_fn_method_signature_to_bytes(uint64_t ptr, RustCallStatus *out_status
);
RustBuffer uniffi_p2panda_ffi_fn_method_signature_to_hex(uint64_t ptr, RustCallStatus *out_status
);
uint64_t uniffi_p2panda_ffi_fn_constructor_topicid_from_bytes(RustBuffer value, RustCallStatus *out_status
);
uint64_t uniffi_p2panda_ffi_fn_constructor_topicid_from_hash(uint64_t hash, RustCallStatus *out_status
);
uint64_t uniffi_p2panda_ffi_fn_constructor_topicid_from_hex(RustBuffer value, RustCallStatus *out_status
);
uint64_t uniffi_p2panda_ffi_fn_constructor_topicid_random(RustCallStatus *out_status
    
);
RustBuffer uniffi_p2panda_ffi_fn_method_topicid_to_bytes(uint64_t ptr, RustCallStatus *out_status
);
RustBuffer uniffi_p2panda_ffi_fn_method_topicid_to_hex(uint64_t ptr, RustCallStatus *out_status
);
void uniffi_p2panda_ffi_fn_method_topicstreamcallback_on_event(uint64_t ptr, RustBuffer event, RustCallStatus *out_status
);
void uniffi_p2panda_ffi_fn_method_topicstreamcallback_on_error(uint64_t ptr, RustBuffer error, RustCallStatus *out_status
);
void uniffi_p2panda_ffi_fn_method_topicstreamcallback_on_operation(uint64_t ptr, uint64_t processed, RustBuffer source, RustCallStatus *out_status
);
uint64_t uniffi_p2panda_ffi_fn_method_topicstream_ack(uint64_t ptr, uint64_t message_id
);
uint64_t uniffi_p2panda_ffi_fn_method_topicstream_prune(uint64_t ptr, RustBuffer message
);
uint64_t uniffi_p2panda_ffi_fn_method_topicstream_publish(uint64_t ptr, RustBuffer message
);
uint64_t uniffi_p2panda_ffi_fn_method_topicstream_topic(uint64_t ptr, RustCallStatus *out_status
);
uint16_t uniffi_p2panda_ffi_checksum_method_cursor_name(void
    
);
uint16_t uniffi_p2panda_ffi_checksum_method_hash_to_bytes(void
    
);
uint16_t uniffi_p2panda_ffi_checksum_method_hash_to_hex(void
    
);
uint16_t uniffi_p2panda_ffi_checksum_method_header_backlink(void
    
);
uint16_t uniffi_p2panda_ffi_checksum_method_header_hash(void
    
);
uint16_t uniffi_p2panda_ffi_checksum_method_header_log_id(void
    
);
uint16_t uniffi_p2panda_ffi_checksum_method_header_payload_hash(void
    
);
uint16_t uniffi_p2panda_ffi_checksum_method_header_payload_size(void
    
);
uint16_t uniffi_p2panda_ffi_checksum_method_header_prune_flag(void
    
);
uint16_t uniffi_p2panda_ffi_checksum_method_header_public_key(void
    
);
uint16_t uniffi_p2panda_ffi_checksum_method_header_seq_num(void
    
);
uint16_t uniffi_p2panda_ffi_checksum_method_header_signature(void
    
);
uint16_t uniffi_p2panda_ffi_checksum_method_header_timestamp(void
    
);
uint16_t uniffi_p2panda_ffi_checksum_method_header_version(void
    
);
uint16_t uniffi_p2panda_ffi_checksum_method_networkid_to_bytes(void
    
);
uint16_t uniffi_p2panda_ffi_checksum_method_networkid_to_hex(void
    
);
uint16_t uniffi_p2panda_ffi_checksum_method_ephemeralmessage_author(void
    
);
uint16_t uniffi_p2panda_ffi_checksum_method_ephemeralmessage_body(void
    
);
uint16_t uniffi_p2panda_ffi_checksum_method_ephemeralmessage_timestamp(void
    
);
uint16_t uniffi_p2panda_ffi_checksum_method_ephemeralmessage_topic(void
    
);
uint16_t uniffi_p2panda_ffi_checksum_method_ephemeralstream_publish(void
    
);
uint16_t uniffi_p2panda_ffi_checksum_method_ephemeralstream_topic(void
    
);
uint16_t uniffi_p2panda_ffi_checksum_method_ephemeralstreamcallback_on_message(void
    
);
uint16_t uniffi_p2panda_ffi_checksum_method_node_ephemeral_stream(void
    
);
uint16_t uniffi_p2panda_ffi_checksum_method_node_id(void
    
);
uint16_t uniffi_p2panda_ffi_checksum_method_node_insert_bootstrap(void
    
);
uint16_t uniffi_p2panda_ffi_checksum_method_node_network_id(void
    
);
uint16_t uniffi_p2panda_ffi_checksum_method_node_stream(void
    
);
uint16_t uniffi_p2panda_ffi_checksum_method_node_stream_from(void
    
);
uint16_t uniffi_p2panda_ffi_checksum_method_event_body(void
    
);
uint16_t uniffi_p2panda_ffi_checksum_method_event_header(void
    
);
uint16_t uniffi_p2panda_ffi_checksum_method_event_is_completed(void
    
);
uint16_t uniffi_p2panda_ffi_checksum_method_event_is_failed(void
    
);
uint16_t uniffi_p2panda_ffi_checksum_constructor_hash_digest(void
    
);
uint16_t uniffi_p2panda_ffi_checksum_constructor_hash_from_bytes(void
    
);
uint16_t uniffi_p2panda_ffi_checksum_constructor_hash_from_hex(void
    
);
uint16_t uniffi_p2panda_ffi_checksum_constructor_networkid_from_bytes(void
    
);
uint16_t uniffi_p2panda_ffi_checksum_constructor_networkid_from_hash(void
    
);
uint16_t uniffi_p2panda_ffi_checksum_constructor_networkid_from_hex(void
    
);
uint16_t uniffi_p2panda_ffi_checksum_constructor_networkid_random(void
    
);
uint16_t uniffi_p2panda_ffi_checksum_constructor_node_spawn(void
    
);
uint32_t ffi_p2panda_ffi_uniffi_contract_version(void
    
);