python/p2panda_ffi/p2panda_ffi.py

_UniffiLib.uniffi_p2panda_ffi_fn_method_publickey_to_hex.argtypes = (
    ctypes.c_uint64,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_p2panda_ffi_fn_method_publickey_to_hex.restype = _UniffiRustBuffer
_UniffiLib.uniffi_p2panda_ffi_fn_method_publickey_verify.argtypes = (
    ctypes.c_uint64,
    _UniffiRustBuffer,
    ctypes.c_uint64,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_p2panda_ffi_fn_method_publickey_verify.restype = ctypes.c_int8
_UniffiLib.uniffi_p2panda_ffi_fn_constructor_relayurl_from_str.argtypes = (
    _UniffiRustBuffer,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_p2panda_ffi_fn_constructor_relayurl_from_str.restype = ctypes.c_uint64
_UniffiLib.uniffi_p2panda_ffi_fn_method_relayurl_to_str.argtypes = (
    ctypes.c_uint64,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_p2panda_ffi_fn_method_relayurl_to_str.restype = _UniffiRustBuffer
_UniffiLib.uniffi_p2panda_ffi_fn_constructor_signature_from_bytes.argtypes = (
    _UniffiRustBuffer,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_p2panda_ffi_fn_constructor_signature_from_bytes.restype = ctypes.c_uint64
_UniffiLib.uniffi_p2panda_ffi_fn_constructor_signature_from_hex.argtypes = (
    _UniffiRustBuffer,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_p2panda_ffi_fn_constructor_signature_from_hex.restype = ctypes.c_uint64
_UniffiLib.uniffi_p2panda_ffi_fn_method_signature_to_bytes.argtypes = (
    ctypes.c_uint64,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_p2panda_ffi_fn_method_signature_to_bytes.restype = _UniffiRustBuffer
_UniffiLib.uniffi_p2panda_ffi_fn_method_signature_to_hex.argtypes = (
    ctypes.c_uint64,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_p2panda_ffi_fn_method_signature_to_hex.restype = _UniffiRustBuffer
_UniffiLib.uniffi_p2panda_ffi_fn_constructor_topicid_from_bytes.argtypes = (
    _UniffiRustBuffer,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_p2panda_ffi_fn_constructor_topicid_from_bytes.restype = ctypes.c_uint64
_UniffiLib.uniffi_p2panda_ffi_fn_constructor_topicid_from_hash.argtypes = (
    ctypes.c_uint64,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_p2panda_ffi_fn_constructor_topicid_from_hash.restype = ctypes.c_uint64
_UniffiLib.uniffi_p2panda_ffi_fn_constructor_topicid_from_hex.argtypes = (
    _UniffiRustBuffer,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_p2panda_ffi_fn_constructor_topicid_from_hex.restype = ctypes.c_uint64
_UniffiLib.uniffi_p2panda_ffi_fn_constructor_topicid_random.argtypes = (
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_p2panda_ffi_fn_constructor_topicid_random.restype = ctypes.c_uint64
_UniffiLib.uniffi_p2panda_ffi_fn_method_topicid_to_bytes.argtypes = (
    ctypes.c_uint64,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_p2panda_ffi_fn_method_topicid_to_bytes.restype = _UniffiRustBuffer
_UniffiLib.uniffi_p2panda_ffi_fn_method_topicid_to_hex.argtypes = (
    ctypes.c_uint64,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_p2panda_ffi_fn_method_topicid_to_hex.restype = _UniffiRustBuffer
_UniffiLib.uniffi_p2panda_ffi_fn_method_topicstream_ack.argtypes = (
    ctypes.c_uint64,
    ctypes.c_uint64,
)
_UniffiLib.uniffi_p2panda_ffi_fn_method_topicstream_ack.restype = ctypes.c_uint64
_UniffiLib.uniffi_p2panda_ffi_fn_method_topicstream_prune.argtypes = (
    ctypes.c_uint64,
    _UniffiRustBuffer,
)
_UniffiLib.uniffi_p2panda_ffi_fn_method_topicstream_prune.restype = ctypes.c_uint64
_UniffiLib.uniffi_p2panda_ffi_fn_method_topicstream_publish.argtypes = (
    ctypes.c_uint64,
    _UniffiRustBuffer,
)
_UniffiLib.uniffi_p2panda_ffi_fn_method_topicstream_publish.restype = ctypes.c_uint64
_UniffiLib.uniffi_p2panda_ffi_fn_method_topicstream_topic.argtypes = (
    ctypes.c_uint64,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_p2panda_ffi_fn_method_topicstream_topic.restype = ctypes.c_uint64
_UniffiLib.uniffi_p2panda_ffi_fn_method_topicstreamcallback_on_event.argtypes = (
    ctypes.c_uint64,
    _UniffiRustBuffer,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_p2panda_ffi_fn_method_topicstreamcallback_on_event.restype = None
_UniffiLib.uniffi_p2panda_ffi_fn_method_topicstreamcallback_on_error.argtypes = (
    ctypes.c_uint64,
    _UniffiRustBuffer,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_p2panda_ffi_fn_method_topicstreamcallback_on_error.restype = None
_UniffiLib.uniffi_p2panda_ffi_fn_method_topicstreamcallback_on_operation.argtypes = (
    ctypes.c_uint64,
    ctypes.c_uint64,
    _UniffiRustBuffer,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_p2panda_ffi_fn_method_topicstreamcallback_on_operation.restype = None
_UniffiLib.ffi_p2panda_ffi_uniffi_contract_version.argtypes = (
)
_UniffiLib.ffi_p2panda_ffi_uniffi_contract_version.restype = ctypes.c_uint32
_UniffiLib.uniffi_p2panda_ffi_checksum_method_cursor_name.argtypes = (
)
_UniffiLib.uniffi_p2panda_ffi_checksum_method_cursor_name.restype = ctypes.c_uint16
_UniffiLib.uniffi_p2panda_ffi_checksum_method_ephemeralmessage_author.argtypes = (
)
_UniffiLib.uniffi_p2panda_ffi_checksum_method_ephemeralmessage_author.restype = ctypes.c_uint16
_UniffiLib.uniffi_p2panda_ffi_checksum_method_ephemeralmessage_body.argtypes = (
)
_UniffiLib.uniffi_p2panda_ffi_checksum_method_ephemeralmessage_body.restype = ctypes.c_uint16
_UniffiLib.uniffi_p2panda_ffi_checksum_method_ephemeralmessage_timestamp.argtypes = (
)
_UniffiLib.uniffi_p2panda_ffi_checksum_method_ephemeralmessage_timestamp.restype = ctypes.c_uint16
_UniffiLib.uniffi_p2panda_ffi_checksum_method_ephemeralmessage_topic.argtypes = (
)
_UniffiLib.uniffi_p2panda_ffi_checksum_method_ephemeralmessage_topic.restype = ctypes.c_uint16
_UniffiLib.uniffi_p2panda_ffi_checksum_method_ephemeralstream_publish.argtypes = (
)
_UniffiLib.uniffi_p2panda_ffi_checksum_method_ephemeralstream_publish.restype = ctypes.c_uint16
_UniffiLib.uniffi_p2panda_ffi_checksum_method_ephemeralstream_topic.argtypes = (
)
_UniffiLib.uniffi_p2panda_ffi_checksum_method_ephemeralstream_topic.restype = ctypes.c_uint16
_UniffiLib.uniffi_p2panda_ffi_checksum_method_ephemeralstreamcallback_on_message.argtypes = (
)
_UniffiLib.uniffi_p2panda_ffi_checksum_method_ephemeralstreamcallback_on_message.restype = ctypes.c_uint16
_UniffiLib.uniffi_p2panda_ffi_checksum_method_event_body.argtypes = (
)
_UniffiLib.uniffi_p2panda_ffi_checksum_method_event_body.restype = ctypes.c_uint16
_UniffiLib.uniffi_p2panda_ffi_checksum_method_event_header.argtypes = (
)
_UniffiLib.uniffi_p2panda_ffi_checksum_method_event_header.restype = ctypes.c_uint16
_UniffiLib.uniffi_p2panda_ffi_checksum_method_event_is_completed.argtypes = (
)
_UniffiLib.uniffi_p2panda_ffi_checksum_method_event_is_completed.restype = ctypes.c_uint16
_UniffiLib.uniffi_p2panda_ffi_checksum_method_event_is_failed.argtypes = (
)
_UniffiLib.uniffi_p2panda_ffi_checksum_method_event_is_failed.restype = ctypes.c_uint16
_UniffiLib.uniffi_p2panda_ffi_checksum_constructor_hash_digest.argtypes = (
)
_UniffiLib.uniffi_p2panda_ffi_checksum_constructor_hash_digest.restype = ctypes.c_uint16
_UniffiLib.uniffi_p2panda_ffi_checksum_constructor_hash_from_bytes.argtypes = (
)
_UniffiLib.uniffi_p2panda_ffi_checksum_constructor_hash_from_bytes.restype = ctypes.c_uint16
_UniffiLib.uniffi_p2panda_ffi_checksum_constructor_hash_from_hex.argtypes = (
)
_UniffiLib.uniffi_p2panda_ffi_checksum_constructor_hash_from_hex.restype = ctypes.c_uint16
_UniffiLib.uniffi_p2panda_ffi_checksum_method_hash_to_bytes.argtypes = (
)
_UniffiLib.uniffi_p2panda_ffi_checksum_method_hash_to_bytes.restype = ctypes.c_uint16
_UniffiLib.uniffi_p2panda_ffi_checksum_method_hash_to_hex.argtypes = (
)
_UniffiLib.uniffi_p2panda_ffi_checksum_method_hash_to_hex.restype = ctypes.c_uint16
_UniffiLib.uniffi_p2panda_ffi_checksum_method_header_backlink.argtypes = (
)
_UniffiLib.uniffi_p2panda_ffi_checksum_method_header_backlink.restype = ctypes.c_uint16
_UniffiLib.uniffi_p2panda_ffi_checksum_method_header_hash.argtypes = (
)
_UniffiLib.uniffi_p2panda_ffi_checksum_method_header_hash.restype = ctypes.c_uint16
_UniffiLib.uniffi_p2panda_ffi_checksum_method_header_log_id.argtypes = (
)
_UniffiLib.uniffi_p2panda_ffi_checksum_method_header_log_id.restype = ctypes.c_uint16
_UniffiLib.uniffi_p2panda_ffi_checksum_method_header_payload_hash.argtypes = (
)
_UniffiLib.uniffi_p2panda_ffi_checksum_method_header_payload_hash.restype = ctypes.c_uint16
_UniffiLib.uniffi_p2panda_ffi_checksum_method_header_payload_size.argtypes = (
)
_UniffiLib.uniffi_p2panda_ffi_checksum_method_header_payload_size.restype = ctypes.c_uint16
_UniffiLib.uniffi_p2panda_ffi_checksum_method_header_prune_flag.argtypes = (
)
_UniffiLib.uniffi_p2panda_ffi_checksum_method_header_prune_flag.restype = ctypes.c_uint16
_UniffiLib.uniffi_p2panda_ffi_checksum_method_header_public_key.argtypes = (
)
_UniffiLib.uniffi_p2panda_ffi_checksum_method_header_public_key.restype = ctypes.c_uint16
_UniffiLib.uniffi_p2panda_ffi_checksum_method_header_seq_num.argtypes = (
)
_UniffiLib.uniffi_p2panda_ffi_checksum_method_header_seq_num.restype = ctypes.c_uint16
_UniffiLib.uniffi_p2panda_ffi_checksum_method_header_signature.argtypes = (
)
_UniffiLib.uniffi_p2panda_ffi_checksum_method_header_signature.restype = ctypes.c_uint16
_UniffiLib.uniffi_p2panda_ffi_checksum_method_header_timestamp.argtypes = (
)
_UniffiLib.uniffi_p2panda_ffi_checksum_method_header_timestamp.restype = ctypes.c_uint16
_UniffiLib.uniffi_p2panda_ffi_checksum_method_header_version.argtypes = (
)
_UniffiLib.uniffi_p2panda_ffi_checksum_method_header_version.restype = ctypes.c_uint16
_UniffiLib.uniffi_p2panda_ffi_checksum_constructor_networkid_from_bytes.argtypes = (
)
_UniffiLib.uniffi_p2panda_ffi_checksum_constructor_networkid_from_bytes.restype = ctypes.c_uint16
_UniffiLib.uniffi_p2panda_ffi_checksum_constructor_networkid_from_hash.argtypes = (
)
_UniffiLib.uniffi_p2panda_ffi_checksum_constructor_networkid_from_hash.restype = ctypes.c_uint16
_UniffiLib.uniffi_p2panda_ffi_checksum_constructor_networkid_from_hex.argtypes = (
)
_UniffiLib.uniffi_p2panda_ffi_checksum_constructor_networkid_from_hex.restype = ctypes.c_uint16
_UniffiLib.uniffi_p2panda_ffi_checksum_constructor_networkid_random.argtypes = (
)
_UniffiLib.uniffi_p2panda_ffi_checksum_constructor_networkid_random.restype = ctypes.c_uint16
_UniffiLib.uniffi_p2panda_ffi_checksum_method_networkid_to_bytes.argtypes = (
)
_UniffiLib.uniffi_p2panda_ffi_checksum_method_networkid_to_bytes.restype = ctypes.c_uint16
_UniffiLib.uniffi_p2panda_ffi_checksum_method_networkid_to_hex.argtypes = (
)
_UniffiLib.uniffi_p2panda_ffi_checksum_method_networkid_to_hex.restype = ctypes.c_uint16
_UniffiLib.uniffi_p2panda_ffi_checksum_constructor_node_spawn.argtypes = (
)
_UniffiLib.uniffi_p2panda_ffi_checksum_constructor_node_spawn.restype = ctypes.c_uint16
_UniffiLib.uniffi_p2panda_ffi_checksum_method_node_ephemeral_stream.argtypes = (
)
_UniffiLib.uniffi_p2panda_ffi_checksum_method_node_ephemeral_stream.restype = ctypes.c_uint16
_UniffiLib.uniffi_p2panda_ffi_checksum_method_node_id.argtypes = (
)
_UniffiLib.uniffi_p2panda_ffi_checksum_method_node_id.restype = ctypes.c_uint16
_UniffiLib.uniffi_p2panda_ffi_checksum_method_node_insert_bootstrap.argtypes = (
)
_UniffiLib.uniffi_p2panda_ffi_checksum_method_node_insert_bootstrap.restype = ctypes.c_uint16
_UniffiLib.uniffi_p2panda_ffi_checksum_method_node_network_id.argtypes = (
)
_UniffiLib.uniffi_p2panda_ffi_checksum_method_node_network_id.restype = ctypes.c_uint16
_UniffiLib.uniffi_p2panda_ffi_checksum_method_node_stream.argtypes = (
)
_UniffiLib.uniffi_p2panda_ffi_checksum_method_node_stream.restype = ctypes.c_uint16
_UniffiLib.uniffi_p2panda_ffi_checksum_method_node_stream_from.argtypes = (
)
_UniffiLib.uniffi_p2panda_ffi_checksum_method_node_stream_from.restype = ctypes.c_uint16
